--- a/latest/index.html
+++ b/latest/index.html
@@ -206,7 +206,7 @@
 </ul>
 <p><a id='Using-the-Package-1'></a></p>
 <h2 id="using-the-package">Using the Package</h2>
-<p>For a quick start it might be useful to start with the <a href="" title="man/HighLevelFunctions.md">high-level convenience functions</a> for detecting anomalies. They can be used in highly automized way. </p>
+<p>For a quick start it might be useful to start with the <a href="" title="man/HighLevelFunctions.md">high level functions</a> for detecting anomalies. They can be used in highly automized way. </p>
 <p><a id='Input-Data-1'></a></p>
 <h2 id="input-data">Input Data</h2>
 <p><em>MultivariateAnomalies.jl</em> assumes that observations/samples/time steps are stored along the first dimension of the data array (rows of a matrix) with the number of observations <code>T = size(data, 1)</code>. Variables/attributes are stored along the last dimension <code>N</code> of the data array (along the columns of a matrix) with the number of variables <code>VAR = size(data, N)</code>. The implemented anomaly detection algorithms return anomaly scores indicating which observation(s) of the data are anomalous.</p>
@@ -313,5 +313,5 @@
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-09-09 20:05:32.261758
+Build Date UTC : 2016-09-09 20:52:58.011144
 -->
