build based on 1c32854

--- a/latest/index.html
+++ b/latest/index.html
@@ -184,13 +184,9 @@
 <p><a id='Package-Features-1'></a></p>
 <h2 id="package-features">Package Features</h2>
 <ul>
-<li>Detect anomalies in your data with </li>
-</ul>
-<pre><code>- easy to use [high level functions](&quot;man/HighLevelFunctions.md&quot;)
-- individual [anomaly detection algorithms](&quot;manAnomalyDetection.md&quot;)
-</code></pre>
-
-<ul>
+<li>
+<p>Detect anomalies in your data with easy to use <a href="" title="man/HighLevelFunctions.md">high level functions</a> or individual <a href="" title="manAnomalyDetection.md">anomaly detection algorithms</a></p>
+</li>
 <li>
 <p><a href="man/Preprocessing/">Feature Extraction</a>: Preprocess your data by extracting relevant features</p>
 </li>
@@ -313,5 +309,5 @@
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-09-09 20:52:58.011144
+Build Date UTC : 2016-09-09 21:10:27.104450
 -->
