--- a/latest/man/DetectionAlgorithms/index.html
+++ b/latest/man/DetectionAlgorithms/index.html
@@ -183,7 +183,7 @@
               
                 <p><a id='Anomaly-Detection-Algorithms-1'></a></p>
 <h2 id="anomaly-detection-algorithms">Anomaly Detection Algorithms</h2>
-<p>Most of the anomaly detection algorithms below work on a distance/similarity matrix <code>D</code> or a kernel/dissimilarity matrix <code>K</code>. They can be comuted using the functions provided <a href="man/DistancesDensity.md">here</a>.</p>
+<p>Most of the anomaly detection algorithms below work on a distance/similarity matrix <code>D</code> or a kernel/dissimilarity matrix <code>K</code>. They can be comuted using the functions provided <a href="../DistancesDensity/">here</a>.</p>
 <p>Currently supported algorithms include</p>
 <ul>
 <li>Recurrences (REC)</li>
