build based on a14a558

--- a/latest/index.html
+++ b/latest/index.html
@@ -185,7 +185,7 @@
 <h2 id="package-features">Package Features</h2>
 <ul>
 <li>
-<p>Detect anomalies in your data with easy to use <a href="" title="man/HighLevelFunctions.md">high level functions</a> or individual <a href="" title="manAnomalyDetection.md">anomaly detection algorithms</a></p>
+<p>Detect anomalies in your data with easy to use <a href="" title="man/HighLevelFunctions.md">high level functions</a> or individual <a href="" title="man/AnomalyDetection.md">anomaly detection algorithms</a></p>
 </li>
 <li>
 <p><a href="man/Preprocessing/">Feature Extraction</a>: Preprocess your data by extracting relevant features</p>
@@ -309,5 +309,5 @@
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-09-09 21:10:27.104450
+Build Date UTC : 2016-09-12 08:04:55.649087
 -->
