--- a/latest/man/HighLevelFunctions/index.html
+++ b/latest/man/HighLevelFunctions/index.html
@@ -227,6 +227,12 @@ julia&gt; detectAnomalies(testing_data, P)
 <p>initialize empty arrays in <code>P</code> for detecting the anomalies.</p>
 <p><a id='Index-1'></a></p>
 <h2 id="index">Index</h2>
+<ul>
+<li><a href="./#MultivariateAnomalies.detectAnomalies"><code>MultivariateAnomalies.detectAnomalies</code></a></li>
+<li><a href="./#MultivariateAnomalies.detectAnomalies!"><code>MultivariateAnomalies.detectAnomalies!</code></a></li>
+<li><a href="./#MultivariateAnomalies.getParameters"><code>MultivariateAnomalies.getParameters</code></a></li>
+<li><a href="./#MultivariateAnomalies.init_detectAnomalies"><code>MultivariateAnomalies.init_detectAnomalies</code></a></li>
+</ul>
               
             </div>
           </div>
