build based on c9f4840

--- a/latest/man/AUC/index.html
+++ b/latest/man/AUC/index.html
@@ -202,6 +202,11 @@ julia&gt; auc_fpr_tpr(scores, events, 0.8)
 
 <p>convert an <code>events</code> array into a boolean array.</p>
 <p>Index</p>
+<ul>
+<li><a href="./#MultivariateAnomalies.auc"><code>MultivariateAnomalies.auc</code></a></li>
+<li><a href="./#MultivariateAnomalies.auc_fpr_tpr"><code>MultivariateAnomalies.auc_fpr_tpr</code></a></li>
+<li><a href="./#MultivariateAnomalies.boolevents"><code>MultivariateAnomalies.boolevents</code></a></li>
+</ul>
               
             </div>
           </div>
