--- a/latest/man/DistancesDensity/index.html
+++ b/latest/man/DistancesDensity/index.html
@@ -289,6 +289,16 @@ julia&gt; kernel_matrix!(D, D, 2.0) # overwrites distance matrix
 
 <p><a id='Index-1'></a></p>
 <h2 id="index">Index</h2>
+<ul>
+<li><a href="./#MultivariateAnomalies.dist_matrix"><code>MultivariateAnomalies.dist_matrix</code></a></li>
+<li><a href="./#MultivariateAnomalies.dist_matrix!"><code>MultivariateAnomalies.dist_matrix!</code></a></li>
+<li><a href="./#MultivariateAnomalies.init_dist_matrix"><code>MultivariateAnomalies.init_dist_matrix</code></a></li>
+<li><a href="./#MultivariateAnomalies.init_knn_dists"><code>MultivariateAnomalies.init_knn_dists</code></a></li>
+<li><a href="./#MultivariateAnomalies.kernel_matrix"><code>MultivariateAnomalies.kernel_matrix</code></a></li>
+<li><a href="./#MultivariateAnomalies.kernel_matrix!"><code>MultivariateAnomalies.kernel_matrix!</code></a></li>
+<li><a href="./#MultivariateAnomalies.knn_dists"><code>MultivariateAnomalies.knn_dists</code></a></li>
+<li><a href="./#MultivariateAnomalies.knn_dists!"><code>MultivariateAnomalies.knn_dists!</code></a></li>
+</ul>
               
             </div>
           </div>
