--- a/latest/man/Postprocessing/index.html
+++ b/latest/man/Postprocessing/index.html
@@ -204,6 +204,11 @@ julia&gt; compute_ensemble(quantile_scores1, quantile_scores2, ensemble = &quot;
 
 <p><a id='Index-1'></a></p>
 <h2 id="index">Index</h2>
+<ul>
+<li><a href="./#MultivariateAnomalies.compute_ensemble"><code>MultivariateAnomalies.compute_ensemble</code></a></li>
+<li><a href="./#MultivariateAnomalies.get_quantile_scores"><code>MultivariateAnomalies.get_quantile_scores</code></a></li>
+<li><a href="./#MultivariateAnomalies.get_quantile_scores!"><code>MultivariateAnomalies.get_quantile_scores!</code></a></li>
+</ul>
               
             </div>
           </div>
