--- a/latest/man/Preprocessing/index.html
+++ b/latest/man/Preprocessing/index.html
@@ -343,6 +343,20 @@ julia&gt; mw_VAR(dc, 15)
 <p>compute the correlation in a moving window along the first dimension of the datacube (presetting: <code>windowsize = 10</code>). Accepts 4-dimensional datacubes.</p>
 <p><a id='Index-1'></a></p>
 <h2 id="index">Index</h2>
+<ul>
+<li><a href="./#MultivariateAnomalies.EWMA"><code>MultivariateAnomalies.EWMA</code></a></li>
+<li><a href="./#MultivariateAnomalies.EWMA!"><code>MultivariateAnomalies.EWMA!</code></a></li>
+<li><a href="./#MultivariateAnomalies.TDE"><code>MultivariateAnomalies.TDE</code></a></li>
+<li><a href="./#MultivariateAnomalies.get_MedianCycle"><code>MultivariateAnomalies.get_MedianCycle</code></a></li>
+<li><a href="./#MultivariateAnomalies.get_MedianCycle!"><code>MultivariateAnomalies.get_MedianCycle!</code></a></li>
+<li><a href="./#MultivariateAnomalies.get_MedianCycles"><code>MultivariateAnomalies.get_MedianCycles</code></a></li>
+<li><a href="./#MultivariateAnomalies.globalICA"><code>MultivariateAnomalies.globalICA</code></a></li>
+<li><a href="./#MultivariateAnomalies.globalPCA"><code>MultivariateAnomalies.globalPCA</code></a></li>
+<li><a href="./#MultivariateAnomalies.init_MedianCycle"><code>MultivariateAnomalies.init_MedianCycle</code></a></li>
+<li><a href="./#MultivariateAnomalies.mw_COR"><code>MultivariateAnomalies.mw_COR</code></a></li>
+<li><a href="./#MultivariateAnomalies.mw_VAR"><code>MultivariateAnomalies.mw_VAR</code></a></li>
+<li><a href="./#MultivariateAnomalies.sMSC"><code>MultivariateAnomalies.sMSC</code></a></li>
+</ul>
               
             </div>
           </div>
