build based on 31d0afd

--- a/latest/index.html
+++ b/latest/index.html
@@ -194,7 +194,7 @@
 <h2 id="package-features">Package Features</h2>
 <ul>
 <li>
-<p>Detect anomalies in your data with easy to use <a href="" title="man/HighLevelFunctions.md">high level functions</a> or individual <a href="" title="man/AnomalyDetection.md">anomaly detection algorithms</a></p>
+<p>Detect anomalies in your data with easy to use <a href="man/HighLevelFunctions/">high level functions</a> or individual <a href="man/AnomalyDetection.md">anomaly detection algorithms</a></p>
 </li>
 <li>
 <p><a href="man/Preprocessing/">Feature Extraction</a>: Preprocess your data by extracting relevant features</p>
@@ -211,7 +211,7 @@
 </ul>
 <p><a id='Using-the-Package-1'></a></p>
 <h2 id="using-the-package">Using the Package</h2>
-<p>For a quick start it might be useful to start with the <a href="" title="man/HighLevelFunctions.md">high level functions</a> for detecting anomalies. They can be used in highly automized way. </p>
+<p>For a quick start it might be useful to start with the <a href="man/HighLevelFunctions/">high level functions</a> for detecting anomalies. They can be used in highly automized way. </p>
 <p><a id='Input-Data-1'></a></p>
 <h2 id="input-data">Input Data</h2>
 <p><em>MultivariateAnomalies.jl</em> assumes that observations/samples/time steps are stored along the first dimension of the data array (rows of a matrix) with the number of observations <code>T = size(data, 1)</code>. Variables/attributes are stored along the last dimension <code>N</code> of the data array (along the columns of a matrix) with the number of variables <code>VAR = size(data, N)</code>. The implemented anomaly detection algorithms return anomaly scores indicating which observation(s) of the data are anomalous.</p>
@@ -321,5 +321,5 @@
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-09-15 09:19:54.480513
+Build Date UTC : 2016-09-15 09:23:30.541459
 -->
